--- a/website-source/css/main.css
+++ b/website-source/css/main.css
@@ -3,6 +3,16 @@
     src: url(../fonts/Rubik-ExtraBold.ttf);
 }
 
+/*
+##     ##    ###    ########   ######
+##     ##   ## ##   ##     ## ##    ##
+##     ##  ##   ##  ##     ## ##
+##     ## ##     ## ########   ######
+ ##   ##  ######### ##   ##         ##
+  ## ##   ##     ## ##    ##  ##    ##
+   ###    ##     ## ##     ##  ######
+*/
+
 :root {
 
     /* FONT SCALE */
@@ -58,6 +68,16 @@
     --rs-width-max-logo: 280px;
 }
 
+/*
+########     ###     ######  ########
+##     ##   ## ##   ##    ## ##
+##     ##  ##   ##  ##       ##
+########  ##     ##  ######  ######
+##     ## #########       ## ##
+##     ## ##     ## ##    ## ##
+########  ##     ##  ######  ########
+*/
+
 html,
 body {
     margin: 0;
@@ -111,175 +131,6 @@ h1 {
     margin-block-start: var(--space-l);
     margin-block-end: var(--space-xl);
 }
-
-/*
-##    ##    ###    ##     ##
-###   ##   ## ##   ##     ##
-####  ##  ##   ##  ##     ##
-## ## ## ##     ## ##     ##
-##  #### #########  ##   ##
-##   ### ##     ##   ## ##
-##    ## ##     ##    ###
-*/
-
-.rs-skip {
-    text-align: center;
-    background-color: white;
-    display: grid;
-    position: relative;
-    grid-template-rows: 0fr;
-    transition: grid-template-rows 0.25s ease-in-out;
-}
-
-.rs-skip:focus-within {
-    grid-template-rows: 1fr;
-}
-
-.rs-skip>p {
-    overflow: hidden;
-    margin: 0;
-}
-
-.rs-skip>p>a {
-    display: inline-block;
-    padding-block: 1rem;
-}
-
-.rs-skip::after {
-    content: "";
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: var(--space-2xs) var(--space-2xs) 0 var(--space-2xs);
-    border-color: white transparent transparent transparent;
-    position: absolute;
-    left: 50%;
-    bottom: calc(var(--space-2xs) * -1);
-    transform: translateX(-50%);
-    pointer-events: none;
-    opacity: 0;
-}
-
-.rs-skip:focus-within::after {
-    opacity: 1;
-}
-
-nav>ul {
-    font-family: var(--rs-font-mono);
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    gap: var(--space-xs);
-    padding-left: 0;
-}
-
-nav>ul>li {
-    display: block;
-    height: fit-content;
-}
-
-nav>ul>li>a {
-    position: relative;
-    display: inline-block;
-    font-weight: bold;
-    font-size: var(--font-size-0);
-    text-decoration: none;
-    padding: var(--space-2xs) var(--space-s);
-    padding-block-end: calc(var(--space-xs) - 5px);
-    color: var(--rs-colour-blue-dark);
-    background-color: rgba(255, 255, 255, 0.3);
-    transition: var(--rs-transition-short);
-    border-block-end-style: solid;
-    border-block-end-width: var(--space-2xs);
-}
-
-html:has(nav>ul>li.is-active>a[href="/article/"]) {
-    --rs-highlight-current: var(--rs-colour-green);
-}
-
-html:has(nav>ul>li.is-active>a[href="/small/"]) {
-    --rs-highlight-current: var(--rs-colour-yellow);
-}
-
-html:has(nav>ul>li.is-active>a[href="/code/"]) {
-    --rs-highlight-current: var(--rs-colour-red);
-}
-
-html,
-body {
-    scrollbar-color: var(--rs-colour-blue-dark) var(--rs-highlight-current);
-}
-
-nav>ul>li>a[href="/"] {
-    border-block-end-color: var(--rs-colour-pink);
-}
-
-nav>ul>li>a[href="/article/"] {
-    border-block-end-color: var(--rs-colour-green);
-}
-
-nav>ul>li>a[href="/small/"] {
-    border-block-end-color: var(--rs-colour-yellow);
-}
-
-nav>ul>li>a[href="/code/"] {
-    border-block-end-color: var(--rs-colour-red);
-}
-
-nav>ul>li>a:hover {
-    background-color: white;
-    /* text-decoration: underline; */
-
-    /* color: var(--rs-colour-blue-dark); */
-    /* background-color: rgba(255, 255, 255, 0.75); */
-}
-
-nav>ul>li.is-active>a {
-    background-color: white;
-}
-
-nav>ul>li.is-active>a::after {
-    content: "";
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: 0 var(--space-2xs) var(--space-2xs) var(--space-2xs);
-    border-color: transparent transparent var(--rs-highlight-current) transparent;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    /* transform: rotate(0deg); */
-    /* text-decoration: underline; */
-    /* background-color: white; */
-    /* background-color: var(--rs-colour-blue-dark);
-    color: var(--rs-colour-yellow); */
-}
-
-nav>ul>li>p {
-    position: absolute;
-    bottom: calc((var(--font-size--1) + var(--space-2xs) * 2) * -1);
-    left: 0;
-    font-size: var(--font-size--1);
-    color: var(--rs-colour-grey);
-    opacity: 0;
-    transition: var(--rs-transition-short);
-}
-
-nav>ul>li>a:hover+p {
-    opacity: 1;
-}
-
-/*
-##     ## ########    ###    ########  ######## ########
-##     ## ##         ## ##   ##     ## ##       ##     ##
-##     ## ##        ##   ##  ##     ## ##       ##     ##
-######### ######   ##     ## ##     ## ######   ########
-##     ## ##       ######### ##     ## ##       ##   ##
-##     ## ##       ##     ## ##     ## ##       ##    ##
-##     ## ######## ##     ## ########  ######## ##     ##
-*/
 
 h1>em {
     --rs-h1-gradient-start: 26%;
@@ -362,6 +213,168 @@ svg:not([width]):not([height]).rs-logo {
 }
 
 /*
+ ######  ##    ## #### ########
+##    ## ##   ##   ##  ##     ##
+##       ##  ##    ##  ##     ##
+ ######  #####     ##  ########
+      ## ##  ##    ##  ##
+##    ## ##   ##   ##  ##
+ ######  ##    ## #### ##
+*/
+
+.rs-skip {
+    text-align: center;
+    background-color: white;
+    display: grid;
+    position: relative;
+    grid-template-rows: 0fr;
+    transition: grid-template-rows 0.25s ease-in-out;
+}
+
+.rs-skip:focus-within {
+    grid-template-rows: 1fr;
+}
+
+.rs-skip>p {
+    overflow: hidden;
+    margin: 0;
+}
+
+.rs-skip>p>a {
+    display: inline-block;
+    padding-block: 1rem;
+}
+
+.rs-skip::after {
+    content: "";
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: var(--space-2xs) var(--space-2xs) 0 var(--space-2xs);
+    border-color: white transparent transparent transparent;
+    position: absolute;
+    left: 50%;
+    bottom: calc(var(--space-2xs) * -1);
+    transform: translateX(-50%);
+    pointer-events: none;
+    opacity: 0;
+}
+
+.rs-skip:focus-within::after {
+    opacity: 1;
+}
+
+/*
+##    ##    ###    ##     ##
+###   ##   ## ##   ##     ##
+####  ##  ##   ##  ##     ##
+## ## ## ##     ## ##     ##
+##  #### #########  ##   ##
+##   ### ##     ##   ## ##
+##    ## ##     ##    ###
+*/
+
+nav>ul {
+    font-family: var(--rs-font-mono);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    list-style: none;
+    gap: var(--space-xs);
+    padding: 0;
+    margin: 0;
+}
+
+nav>ul>li {
+    display: block;
+    height: fit-content;
+}
+
+nav>ul>li>a {
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    font-size: var(--font-size-0);
+    text-decoration: none;
+    padding: var(--space-2xs) var(--space-s);
+    padding-block-end: calc(var(--space-xs) - 5px);
+    color: var(--rs-colour-blue-dark);
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: var(--rs-transition-short);
+    border-block-end-style: solid;
+    border-block-end-width: var(--space-2xs);
+}
+
+html:has(nav>ul>li.is-active>a[href="/article/"]) {
+    --rs-highlight-current: var(--rs-colour-green);
+}
+
+html:has(nav>ul>li.is-active>a[href="/small/"]) {
+    --rs-highlight-current: var(--rs-colour-yellow);
+}
+
+html:has(nav>ul>li.is-active>a[href="/code/"]) {
+    --rs-highlight-current: var(--rs-colour-red);
+}
+
+html,
+body {
+    scrollbar-color: var(--rs-colour-blue-dark) var(--rs-highlight-current);
+}
+
+nav>ul>li>a[href="/"] {
+    border-block-end-color: var(--rs-colour-pink);
+}
+
+nav>ul>li>a[href="/article/"] {
+    border-block-end-color: var(--rs-colour-green);
+}
+
+nav>ul>li>a[href="/small/"] {
+    border-block-end-color: var(--rs-colour-yellow);
+}
+
+nav>ul>li>a[href="/code/"] {
+    border-block-end-color: var(--rs-colour-red);
+}
+
+nav>ul>li>a:hover {
+    background-color: white;
+}
+
+nav>ul>li.is-active>a {
+    background-color: white;
+}
+
+nav>ul>li.is-active>a::after {
+    content: "";
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 0 var(--space-2xs) var(--space-2xs) var(--space-2xs);
+    border-color: transparent transparent var(--rs-highlight-current) transparent;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+}
+
+nav>ul>li>p {
+    position: absolute;
+    bottom: calc((var(--font-size--1) + var(--space-2xs) * 2) * -1);
+    left: 0;
+    font-size: var(--font-size--1);
+    color: var(--rs-colour-grey);
+    opacity: 0;
+    transition: var(--rs-transition-short);
+}
+
+nav>ul>li>a:hover+p {
+    opacity: 1;
+}
+
+/*
 ##        #######   ######    #######
 ##       ##     ## ##    ##  ##     ##
 ##       ##     ## ##        ##     ##
@@ -374,7 +387,7 @@ svg:not([width]):not([height]).rs-logo {
 
 .rs-logo {
     display: block;
-    cursor: pointer;
+    margin: 0 auto var(--space-s) auto;
 }
 
 .rs-logo svg circle[data-id="rs-sun"] {
@@ -416,6 +429,16 @@ svg:not([width]):not([height]).rs-logo {
         animation: none;
     }
 }
+
+/*
+##          ###    ##    ##  #######  ##     ## ########
+##         ## ##    ##  ##  ##     ## ##     ##    ##
+##        ##   ##    ####   ##     ## ##     ##    ##
+##       ##     ##    ##    ##     ## ##     ##    ##
+##       #########    ##    ##     ## ##     ##    ##
+##       ##     ##    ##    ##     ## ##     ##    ##
+######## ##     ##    ##     #######   #######     ##
+*/
 
 /* https: //every-layout.dev/layouts/sidebar/ */
 
@@ -490,68 +513,6 @@ a[href="#bio"]:hover>span>img {
         transform: rotate(-45deg) translate(30%, 10%);
     }
 }
-
-.rs-banner {
-    width: 100% !important;
-    height: var(--space-l) !important;
-    margin-block-end: 0;
-}
-
-@media only screen and (min-width: 800px) {
-    .rs-banner {
-        margin-block-end: var(--space-m);
-    }
-}
-
-.rs-offer {
-    position: relative;
-    width: 70%;
-    margin: 0 auto;
-    background-color: var(--rs-colour-blue-dark);
-    color: white;
-    text-align: center;
-    margin-block-start: var(--space-xl);
-    margin-block-end: var(--space-2xl);
-    /* transform: rotate(-5deg); */
-    padding: var(--space-s) var(--space-s);
-    /* border-radius: 10px; */
-    text-wrap: balance;
-    /* box-shadow: inset 0 0 10px #05C7F2, 0 0 20px #05C7F2; */
-    /* border: 2px solid white; */
-    --rs-offer-zig: 8px;
-    --rs-offer-zag: calc(8px * 2);
-    --mask:
-        linear-gradient(#000 0 0) center/calc(100% - var(--rs-offer-zag)) calc(100% - var(--rs-offer-zag)) no-repeat,
-        conic-gradient(from 135deg at top, #0000, #000 1deg 89deg, #0000 90deg) 0 0 /var(--rs-offer-zag) var(--rs-offer-zig) space no-repeat,
-        conic-gradient(from -45deg at bottom, #0000, #000 1deg 89deg, #0000 90deg) 0 100%/var(--rs-offer-zag) var(--rs-offer-zig) space no-repeat,
-        conic-gradient(from 45deg at left, #0000, #000 1deg 89deg, #0000 90deg) 0 0 /var(--rs-offer-zig) var(--rs-offer-zag) no-repeat space,
-        conic-gradient(from -135deg at right, #0000, #000 1deg 89deg, #0000 90deg) 100% 0/var(--rs-offer-zig) var(--rs-offer-zag) no-repeat space;
-    -webkit-mask: var(--mask);
-    mask: var(--mask);
-}
-
-.rs-rainbow-top {
-    border-top: var(--space-xs) solid transparent;
-    border-image: linear-gradient(89.7deg,
-            rgba(223, 0, 0, 1) 2.7%,
-            rgba(225, 182, 0) 15.1%,
-            rgba(233, 245, 0, 1) 29.5%,
-            rgba(23, 255, 17, 1) 45.8%,
-            rgba(29, 255, 255, 1) 61.5%,
-            rgba(5, 17, 255, 1) 76.4%,
-            rgba(202, 0, 253, 1) 92.4%);
-    border-image-slice: 1;
-}
-
-/* /*
-/* .##..........###....##....##..#######..##.....##.########
-/* .##.........##.##....##..##..##.....##.##.....##....##...
-/* .##........##...##....####...##.....##.##.....##....##...
-/* .##.......##.....##....##....##.....##.##.....##....##...
-/* .##.......#########....##....##.....##.##.....##....##...
-/* .##.......##.....##....##....##.....##.##.....##....##...
-/* .########.##.....##....##.....#######...#######.....##...
-/* */
 
 .rs-column-header-wide {
     margin: 0 auto;
